@@ -28,6 +28,8 @@
 
 {campaigns}
 
+{editor-groups.cfg}
+
 [advanced_preference]
     field=compress_saves
     name=_"Binary Saves"
