@@ -25,6 +25,7 @@ Version 1.3-svn:
    * flipping a map over the Y axis no longer resizes the map
    * flipping a map over the X axis uses slightly different filler rules
    * added the paste option to the edit menu
+   * added the option to split the terrains is groups
  * graphics
    * improved layering system for terrain graphics
    * fixed terrain selection probabilites (patch #617)
